Fixed misaligned working areas for creating ack, shipping and acknowledgements

--- a/app/styles/orders/estimate/create.less
+++ b/app/styles/orders/estimate/create.less
@@ -7,7 +7,7 @@
     
     .addPage;
     
-    
+    left:200px;
     
    
     
