--- a/app/styles/orders/shipping/create.less
+++ b/app/styles/orders/shipping/create.less
@@ -6,7 +6,8 @@
     
     
     .addPage;
-    
+    left:200px;
+	
     /*Sidebar*/
    .sidebar{
       ul{
